grafana/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-system
  labels:
    app: monitoring-system
